# FORGE

./: .gitignore  CHANGELOG.md  FORGE-Desktop-App-Debug.spec  FORGE-Desktop-App.spec  FORGE-Desktop-Debug.spec  FORGE-Desktop-Dir.spec  FORGE-Desktop.spec  FORGE_HUMANITARIAN_AGENT_SYSTEM.md  FORGE_IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  forge_desktop.py  package-lock.json  package.json  playwright.desktop.binary.config.js  playwright.desktop.config.js  playwright.desktop.installed.config.js  playwright.portal.config.js  pyproject.toml
.agents/: AGENTS.md
.forge_mission_tests/: mission-form-2.html  mission-form.html  mock_platform_server.py  mock_publish_server.py
.github/workflows/: deploy_forge_site.yml  publish-pypi.yml  release_forge_windows.yml
forge/: __init__.py
forge/brain/: __init__.py  agent_factory.py  agent_prompt.py  approval.py  composer.py  contracts.py  council.py  identity.py  identity_guard.py  intent.py  mission_store.py  operator.py  orchestrator.py  planner.py  prompt.py  worker_executor.py  worker_protocol.py  worker_runtime.py
forge/cli/: main.py
forge/config/: __init__.py  settings.py
forge/core/: conversation_dna.py  discovery.py  identity.py  models.py  quota.py  router.py  session.py
forge/desktop/: __init__.py  account_client.py  app.py  diagnostics.py  runtime.py  server.py
forge/memory/: __init__.py  context.py  graph.py
forge/providers/: __init__.py  anthropic.py  base.py  cloudflare.py  deepseek.py  gemini.py  groq.py  huggingface.py  mistral.py  nvidia.py  ollama.py  openai.py  openrouter.py  registry.py  together.py
forge/recovery/: __init__.py  manager.py
forge/runtime/: __init__.py  agent.py  contracts.py  gateway.py  (+5 more)
installer/: forge.iss
site/: .htaccess  index.html  release-manifest.json
site_backend/: __init__.py
tools/: build_forge_icon.py  build_installer_assets.py  build_windows_desktop.py  build_windows_installer.py  deploy_hostinger_site.py  package_release_assets.py  run_desktop_binary_server.py  run_desktop_source_server.py  sync_hostinger_release_mirror.py  sync_release_manifest.py  verify_forge_public_routes.py  verify_release_public_assets.py
(+107 files in other folders)
