[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-agent"
version = "1.1.6"
description = "The world's most powerful free AI agent. Self-evolving. Zero cost. Forever."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "TREN Studio", email = "hello@trenstudio.com"}]
keywords = ["ai", "agent", "llm", "free", "open-source", "forge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
    "sqlmodel>=0.0.18",
    "aiohttp>=3.9",
    "tenacity>=8.3",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "colorama>=0.4",
    "cryptography>=42",
]

[project.optional-dependencies]
tools = ["playwright>=1.44", "beautifulsoup4>=4.12", "duckduckgo-search>=6.2"]
dev   = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
forge = "forge.cli.main:cli"

[project.urls]
Homepage   = "https://www.trenstudio.com/FORGE"
Repository = "https://github.com/TREN-Studio/FORGE"
Issues     = "https://github.com/TREN-Studio/FORGE/issues"

[tool.setuptools.packages.find]
include = ["forge*", "site_backend*"]
exclude = ["assets*", "installer*", "output*", "site*", "site_external*", "tests*", "tools*"]

[tool.setuptools.package-data]
forge = [
    "skills_catalog/*/schema.json",
    "skills_catalog/*/SKILL.md",
    "skills_catalog/*/executor.py",
    "skills_catalog/_template/SKILL.md",
]

[tool.setuptools.exclude-package-data]
forge = [
    "skills_catalog/**/__pycache__/*",
    "skills_catalog/**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
